@@ -26,26 +26,17 @@ import gutils
 def change_filter(self):
 	x = 0
 	self.all_movies.set_active(2)
-	criteria = gutils.on_combo_box_entry_changed(self.filter_criteria)
 	text = gutils.gescape(self.e_filter.get_text())
-	if criteria == self._("Original Title") and text:
-		data = self.db.select_movie_by_original_title(text)
-	elif criteria == self._("Title")  and text:
-		data = self.db.select_movie_by_title(text)
-	elif criteria == self._("Director")  and text:
-		data = self.db.select_movie_by_director(text)
-	elif criteria == self._("Year")  and text:
-		data = self.db.select_movie_by_year(text)
-	elif criteria == self._("Number")  and text:
-		data = self.db.select_movie_by_num(text)
-	elif criteria == self._("Rating")  and text:
-		data = self.db.select_movie_by_rating(text)
-	elif criteria == self._("Genre")  and text:
-		data = self.db.select_movie_by_genre(text)
-	elif criteria == self._("With")  and text:
-		data = self.db.select_movie_by_actors(text)
-	else:
+	if(len(text)==0):
 		data = self.db.get_all_data(order_by="number ASC")
+	else:
+		text = gutils.gescape(text)
+		criteria = self.sort_criteria[self.filter_criteria.get_active()]
+		if {"year":None, "runtime":None, "num_media":None}.has_key(criteria):
+			where_clause = criteria + " = '"+text+"'"
+		else:
+			where_clause = criteria + " LIKE '%" + text + "%'"
+		data = self.db.get_all_data(where=where_clause, order_by="number ASC")
 	for row in data:
 		x = x + 1	
 	self.total_filter = x
@@ -54,6 +45,6 @@ def change_filter(self):
 		
 def clear_filter(self):
 	self.e_filter.set_text("")
-	self.filter_criteria.set_active(1)
+	self.filter_criteria.set_active(0)
 	self.total_filter = self.total
 	self.go_last()
