@@ -4,6 +4,11 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2006 Vasco Nunes
 
+2006-04-11 Piotr Ozarowski <ozarow@gmail.com>
+	* Filter function rewrited
+	  + new filelds added
+	  + it should work on Windows now
+
 2006-04-08 Piotr Ozarowski <ozarow@gmail.com>
 	* First tag can now be renamed
 
